# backup

./: README.md
ML_Projects/ConvNet/: Makefile  main
ML_Projects/ConvNet/Includes/Network/: Network.cpp  Network.h
ML_Projects/ConvNet/Includes/Node/: BaseNode.h  EndNode.h  FirstNode.h  Node.h
Machine_Learning/ConvoNet/ConvNet/src/headers/network/: Network.h
Machine_Learning/ConvoNet/ConvNet/src/headers/node/: InternalNode.h
Machine_Learning/ConvoNet/ConvNet/src/source/: Network.cpp
Machine_Learning/ImageNeuralBasic/Debug/: Classifier0.cpp  Classifier0.h  DatasetReader0.h  Makefile0  RANDOM0  Source0.cpp  Tensor0.h  main0
Machine_Learning/ImageReadProject/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
Machine_Learning/ImageReadProject/include/: Classification.h  mnist_dataset_reader.h
Machine_Learning/ImageReadProject/src/: Classification.cpp  Source.cpp  mnist_dataset_reader.cpp
Machine_Learning/NeuralEigen/: CLASSIFIERCRAP  CRAP.cpp  Classifier.cpp  Classifier.h  Dataset_reader.cpp  Dataset_reader.h  Makefile  Neurons.cpp  Neurons.h  Source.cpp  main
Machine_Learning/testMNIST/MNIST1/: Source.cpp  WeightsBiasesJSON.txt  main
